Transferring to laptop

--- a/static/triplets/custom_triplets.yaml
+++ b/static/triplets/custom_triplets.yaml
@@ -13,3 +13,11 @@
   negative: [ORANGE, SPELL, TAIL, DUCK, DOG, MATCH]
   clues: [STEAK]
   nonclues: []
+- id: 9e622bf6-31ea-4150-bed5-4532f7b2fe70
+  positive: [BUG, CONTRACT]
+  negative: [ROUND, HIMALAYAS, CENTAUR, ROBOT, CONCERT, HOSPITAL, GOLD,NOVEL,SHOP,CHARGE,CODE,WATCH,LASER,CYCLE,BUTTON,RAY,WAVE,GROUND,TORCH]
+  clues: [MALARIA]
+- id: 
+  positive: [KNIGHT, TOWER]
+  negative: [PUMPKIN,AZTEC,HEART,ROBIN,ROW,BALL,ENGINE,NEW YORK,FALL,HORN,TELESCOPE,COOK,TAG,CIRCLE,BOARD,SEAL,SCALE,PRESS,MILLIONAIRE]
+  clues: [CASTLE]
